module/openapi-annotations/src/test/resources/net/jacobpeterson/jet/openapiannotations/blackboxtest/toplevel/fail/duplicateannotation/Test.java
import net.jacobpeterson.jet.openapiannotations.annotation.OpenApi;

@OpenApi()
public final class Test {

    @OpenApi()
    public void test() {}
}
